<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/login_bar"
        style="@style/Toolbar.MyStyle"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:titleTextAppearance="@style/Toolbar.TitleText"
        app:titleTextColor="@android:color/white">

        <TextView
            android:id="@+id/tv_toolbar"
            style="@style/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/personalLogin" />

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/selector_view_block"
        android:orientation="vertical">

        <com.example.bookadmin.widget.ClearEditText
            android:id="@+id/etxt_name"
            style="@style/editText_base"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawableLeft="@drawable/icon_telphone_32"
            android:drawablePadding="20dp"
            android:hint="@string/enterUserName"
            android:inputType="text" />

        <View style="@style/line_vertical" />

        <!--<com.example.bookadmin.widget.ClearEditText
            android:id="@+id/etxt_phone"
            style="@style/editText_base"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/icon_telphone_32"
            android:drawablePadding="20dp"
            android:hint="请输入手机号码"
            android:inputType="phone" />

        <View style="@style/line_vertical" />-->


        <com.example.bookadmin.widget.ClearEditText
            android:id="@+id/etxt_pwd"
            style="@style/editText_base"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:drawableLeft="@drawable/icon_lock"
            android:drawablePadding="20dp"
            android:hint="@string/enterLoginPassword"
            android:inputType="textPassword" />

    </LinearLayout>


    <Button
        android:id="@+id/btn_login"
        style="@style/bigRedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/login" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="center_vertical"
        android:layout_margin="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_toReg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/registeredAccount"
            android:textColor="@color/blue"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/tv_forget"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/forgotPassword"
            android:textColor="@color/blue"
            android:textSize="14sp"/>

    </LinearLayout>

</LinearLayout>