<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:navigationIcon="@mipmap/lg"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="修改密码(1/3)"
        style="@style/Toolbar.MyStyle"
        app:titleTextAppearance="@style/Toolbar.TitleText"
        app:titleTextColor="@android:color/white"

        >


        <TextView
            android:id="@+id/btnRight"
            android:layout_gravity="right"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            android:text="@string/nextStep"
            android:layout_marginRight="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </android.support.v7.widget.Toolbar>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/selector_view_block"
        android:orientation="vertical"
        android:padding="@dimen/largePadding">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/largePadding"
        android:paddingTop="@dimen/largePadding" >


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/countryRegion"
            android:textColor="@color/black"
            android:textSize="18sp" />


        <TextView
            android:id="@+id/txtCountry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/china"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </RelativeLayout>

    <View style="@style/line_vertical"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/largePadding"
            android:paddingTop="@dimen/largePadding">


            <TextView
                android:id="@+id/txtCountryCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="+86"
                android:textColor="@color/black"
                android:textSize="16sp"

                />

            <View style="@style/line_horizontal" />

            <com.example.bookadmin.widget.ClearEditText
                android:id="@+id/edittxt_phone"
                style="@style/editText_base"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:hint="@string/enterRegPhonenumber"
                android:inputType="phone" />


        </LinearLayout>


    </LinearLayout>



</LinearLayout>