<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:orientation="vertical">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:navigationIcon="@mipmap/lg"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="@string/userRegistration2"
        style="@style/Toolbar.MyStyle"
        app:titleTextAppearance="@style/Toolbar.TitleText"
        app:titleTextColor="@android:color/white"
        >


        <TextView
            android:id="@+id/btnRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="20dp"
            android:text="@string/complete"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold" />

    </android.support.v7.widget.Toolbar>


    <TextView
        android:id="@+id/txtTip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:padding="@dimen/largePadding"
        android:textColor="@color/border_color"
        android:textSize="12sp"

        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="@dimen/largePadding"

        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp">

            <com.example.bookadmin.widget.ClearEditText
                android:id="@+id/edittxt_code"
                style="@style/editText_base"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/enterCaptcha"
                android:inputType="number"
                android:maxLength="4" />


            <Button
                android:id="@+id/btn_reSend"
                style="@style/smallGreenButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:enabled="false"
                android:text="@string/smssdk_resend_identify_code" />
        </LinearLayout>

        <View style="@style/line_vertical" />


    </LinearLayout>


</LinearLayout>
